--- a/pre-arrival.html
+++ b/pre-arrival.html
@@ -26,7 +26,7 @@
 
         <section id="directions">
             <h2>Directions and Getting Here Smoothly</h2>
-            <img src="https://images.unsplash.com/photo-1594387295585-34417dc1a0e5" alt="Resort entrance" class="section-image">
+            <img src="https://images.unsplash.com/photo-1566073771259-6a8506099945?auto=format&fit=crop&q=80" alt="Luxury hotel entrance" class="section-image">
             <p>Our resort is located at [Address]. Here's how to reach us:</p>
             <ul>
                 <li>From the airport: 30-minute drive via Highway 1</li>
