--- a/share-story.html
+++ b/share-story.html
@@ -36,7 +36,7 @@
 
         <section id="memories">
             <h2>Join the Wall of Smiles & Memories</h2>
-            <img src="https://images.unsplash.com/photo-1582578598774-a377d4b786c4" alt="Memory wall" class="section-image">
+            <img src="https://images.unsplash.com/photo-1515187029135-18ee286d815b" alt="Guest memories wall" class="section-image">
             <p>Be part of our growing family:</p>
             <ul>
                 <li>Sign our digital guestbook</li>
