--- a/guestguide.html
+++ b/guestguide.html
@@ -278,7 +278,6 @@
                 <div>
                     <h2 class="card-title">Welcome</h2>
                     <div class="card-info">
-                        <span>A Little Note to Start Your Stay</span>
                     </div>
                 </div>
             </div>
@@ -291,9 +290,8 @@
             </div>
             <div class="card-content">
                 <div>
-                    <h2 class="card-title">Pre-Arrival Essentials</h2>
+                    <h2 class="card-title">Before You Arrive</h2>
                     <div class="card-info">
-                        <span>Get ready</span>
                     </div>
                 </div>
             </div>
@@ -306,9 +304,8 @@
             </div>
             <div class="card-content">
                 <div>
-                    <h2 class="card-title">Your First Moments</h2>
+                    <h2 class="card-title">When You Arrive</h2>
                     <div class="card-info">
-                        <span>Welcome home</span>
                     </div>
                 </div>
             </div>
@@ -321,9 +318,8 @@
             </div>
             <div class="card-content">
                 <div>
-                    <h2 class="card-title">Stay in touch – Wi-Fi, AC, & Reception</h2>
+                    <h2 class="card-title">Wifi and Essentials</h2>
                     <div class="card-info">
-                        <span>Find out here</span>
                     </div>
                 </div>
             </div>
@@ -338,7 +334,6 @@
                 <div>
                     <h2 class="card-title">Hidden Gems & Amenities</h2>
                     <div class="card-info">
-                        <span>Don't miss these</span>
                     </div>
                 </div>
             </div>
@@ -351,9 +346,17 @@
             </div>
             <div class="card-content">
                 <div>
-                    <h2 class="card-title">Discover Nearby Adventures & Sights</h2>
+                    <h2 class="card-title">Nearby Attractions & things to do<html lang="en">
+                    <head>
+                        <meta charset="UTF-8">
+                        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                        <title>Document</title>
+                    </head>
+                    <body>
+                        
+                    </body>
+                    </html></h2>
                     <div class="card-info">
-                        <span>Local attractions</span>
                     </div>
                 </div>
             </div>
@@ -366,9 +369,8 @@
             </div>
             <div class="card-content">
                 <div>
-                    <h2 class="card-title">Play Safe – Our Tips & Guidelines</h2>
+                    <h2 class="card-title">Safety & Property Rules</h2>
                     <div class="card-info">
-                        <span>Safety first</span>
                     </div>
                 </div>
             </div>
@@ -381,9 +383,8 @@
             </div>
             <div class="card-content">
                 <div>
-                    <h2 class="card-title">Leave Your Mark – Share Your Story</h2>
+                    <h2 class="card-title">Leave a Review - Share Your Experience</h2>
                     <div class="card-info">
-                        <span>Guest experiences</span>
                     </div>
                 </div>
             </div>
@@ -396,9 +397,8 @@
             </div>
             <div class="card-content">
                 <div>
-                    <h2 class="card-title">Until Next Time – A Fond Farewell</h2>
+                    <h2 class="card-title">Until Next Time</h2>
                     <div class="card-info">
-                        <span>Checkout guide</span>
                     </div>
                 </div>
             </div>
