--- a/guestguide.html
+++ b/guestguide.html
@@ -60,11 +60,12 @@
             position: absolute;
             top: 20px;
             right: 20px;
-            background: rgb(255, 255, 255);
+            background: rgb(255, 77, 0);
             padding: 8px 16px;
             border-radius: 20px;
             font-size: 14px;
             font-weight: bold;
+            color: white;
         }
 
         .card-content {
