--- a/guestguide.html
+++ b/guestguide.html
@@ -60,12 +60,12 @@
             position: absolute;
             top: 20px;
             right: 20px;
-            background: rgb(255, 77, 0);
+            background: rgb(255, 255, 255);
             padding: 8px 16px;
             border-radius: 20px;
             font-size: 14px;
             font-weight: bold;
-            color: white;
+            color: rgb(0, 0, 0);
         }
 
         .card-content {
@@ -289,7 +289,7 @@
 </head>
 <body>
     <a href="property-map.html" class="map-button" target="_blank">The Map</a>
-    <h1>All You Need for a Perfect Stay</h1>
+    <h1>All You Need</h1>
     <div class="container">
         <!-- Card 1 -->
         <div class="card">
@@ -308,7 +308,7 @@
         <!-- Card 2 -->
         <div class="card">
             <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1566073771259-6a8506099945')">
-                <span class="tag">PREP</span>
+                <span class="tag">Prep</span>
             </div>
             <div class="card-content">
                 <div>
@@ -336,11 +336,11 @@
         <!-- Card 4 -->
         <div class="card">
             <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1598928506311-c55ded91a20c')">
-                <span class="tag">CONNECT</span>
+                <span class="tag">Connect</span>
             </div>
             <div class="card-content">
                 <div>
-                    <h2 class="card-title">Wifi and Essentials</h2>
+                    <h2 class="card-title">Wi-Fi & More</h2>
                     <div class="card-info">
                     </div>
                 </div>
@@ -354,7 +354,7 @@
             </div>
             <div class="card-content">
                 <div>
-                    <h2 class="card-title">Hidden Gems & Amenities</h2>
+                    <h2 class="card-title">Amenities</h2>
                     <div class="card-info">
                     </div>
                 </div>
@@ -364,7 +364,7 @@
         <!-- Card 6 -->
         <div class="card">
             <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1544644181-1484b3fdfc62')">
-                <span class="tag">EXPLORE</span>
+                <span class="tag">Explore</span>
             </div>
             <div class="card-content">
                 <div>
@@ -387,7 +387,7 @@
         <!-- Card 7 -->
         <div class="card">
             <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1584132967334-10e028bd69f7')">
-                <span class="tag">SAFETY</span>
+                <span class="tag">Safety</span>
             </div>
             <div class="card-content">
                 <div>
@@ -401,7 +401,7 @@
         <!-- Card 8 -->
         <div class="card">
             <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1576078044571-8ea98b0b0963')">
-                <span class="tag">REVIEW</span>
+                <span class="tag">Review</span>
             </div>
             <div class="card-content">
                 <div>
@@ -415,7 +415,7 @@
         <!-- Card 9 -->
         <div class="card">
             <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1520250497591-112f2f40a3f4')">
-                <span class="tag">FAREWELL</span>
+                <span class="tag">Farewell</span>
             </div>
             <div class="card-content">
                 <div>
