--- a/guestguide.html
+++ b/guestguide.html
@@ -21,6 +21,7 @@
 
         h1 {
             font-size: 24px;
+            margin-top: 60px;
             margin-bottom: 30px;
             text-align: center;
         }
@@ -146,7 +147,15 @@
         @media (max-width: 480px) {
             h1 {
                 font-size: 20px;
+                margin-top: 50px;
                 margin-bottom: 20px;
+            }
+
+            .map-button {
+                top: 10px;
+                right: 10px;
+                padding: 6px 12px;
+                font-size: 12px;
             }
         }
 
@@ -269,8 +278,8 @@
         /* Add this new style for the map button */
         .map-button {
             position: fixed;
-            top: 20px;
-            right: 20px;
+            top: 15px;
+            right: 15px;
             background: rgb(255, 77, 0);
             color: white;
             padding: 8px 16px;
