--- a/property-map.html
+++ b/property-map.html
@@ -150,7 +150,7 @@
         <a href="guestguide.html" class="map-button">Back to Guide</a>
     </div>
     <div class="map-container">
-        <img src="handbook/sri.jpg" 
+        <img src="images/sri.jpg" 
              alt="Property Map" 
              class="map-image">
         
