--- a/discover-nearby.html
+++ b/discover-nearby.html
@@ -49,7 +49,7 @@
 
         <section id="historical">
             <h2>Must-Visit Historical Spots Nearby</h2>
-            <img src="https://images.unsplash.com/photo-1548668392-d7b557c84548" alt="Historic landmark" class="section-image">
+            <img src="https://images.unsplash.com/photo-1564507592333-c60657eea523" alt="Historic monument" class="section-image">
             <p>Discover the rich history of our region:</p>
             <ul>
                 <li>Ancient temples and ruins</li>
