--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            /* background-color: rgba(0, 0, 0, 0.5); */
+            border-radius: 10px;
         }
 
         .destination-info {
@@ -53,6 +55,7 @@
             font-weight: 400;
             margin-bottom: 0;
             line-height: 1.1;
+            color: white;
         }
 
         .destination-info h2 {
@@ -60,6 +63,7 @@
             font-weight: 400;
             margin-bottom: 2vh;
             line-height: 1.1;
+            color: white;
         }
 
         .location {
