--- a/guestguide.html
+++ b/guestguide.html
@@ -342,6 +342,62 @@
             </div>
         </div>
 
+        <!-- Card: If you have kids -->
+        <div class="card">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1472162072942-cd5147eb3902')">
+                <span class="tag">Kids</span>
+            </div>
+            <div class="card-content">
+                <div>
+                    <h2 class="card-title">If You Have Kids</h2>
+                    <div class="card-info">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Card: If you love adventures -->
+        <div class="card">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1533692328991-08159ff19fca')">
+                <span class="tag">Adventure</span>
+            </div>
+            <div class="card-content">
+                <div>
+                    <h2 class="card-title">If You Love Adventures</h2>
+                    <div class="card-info">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Card: Necessities and convenience -->
+        <div class="card">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1445991842772-097fea258e7b')">
+                <span class="tag">Essentials</span>
+            </div>
+            <div class="card-content">
+                <div>
+                    <h2 class="card-title">Necessities & Convenience</h2>
+                    <div class="card-info">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Card: Shopping nearby -->
+        <div class="card">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1555921015-5532091f6026')">
+                <span class="tag">Shopping</span>
+            </div>
+            <div class="card-content">
+                <div>
+                    <h2 class="card-title">Shopping Nearby</h2>
+                    <div class="card-info">
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Card 4 -->
         <div class="card">
             <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1598928506311-c55ded91a20c')">
