--- a/guestguide.html
+++ b/guestguide.html
@@ -316,7 +316,7 @@
 
         <!-- Card 2 -->
         <div class="card">
-            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1566073771259-6a8506099945')">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1545324418-cc1a3fa10c00?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80')">
                 <span class="tag">Prep</span>
             </div>
             <div class="card-content">
@@ -328,9 +328,9 @@
             </div>
         </div>
 
-        <!-- Card 3 -->
+        <!-- Card: When You Arrive -->
         <div class="card">
-            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1540541338287-41700207dee6')">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1590381105924-c72589b9ef3f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1471&q=80')">
                 <span class="tag">Arrival</span>
             </div>
             <div class="card-content">
@@ -400,7 +400,7 @@
 
         <!-- Card 4 -->
         <div class="card">
-            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1598928506311-c55ded91a20c')">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1483478550801-ceba5fe50e8e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80')">
                 <span class="tag">Connect</span>
             </div>
             <div class="card-content">
@@ -451,7 +451,7 @@
 
         <!-- Card 7 -->
         <div class="card">
-            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1584132967334-10e028bd69f7')">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1584433144859-1fc3ab64a957?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80')">
                 <span class="tag">Safety</span>
             </div>
             <div class="card-content">
@@ -479,7 +479,7 @@
 
         <!-- Card 9 -->
         <div class="card">
-            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1520250497591-112f2f40a3f4')">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1596394516093-501ba68a0ba6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80')">
                 <span class="tag">Farewell</span>
             </div>
             <div class="card-content">
