--- a/guestguide.html
+++ b/guestguide.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guest Guide</title>
+    <title>Your Page Title Here</title>
+    <meta name="description" content="A brief description of your page for SEO.">
+    <meta name="keywords" content="keyword1, keyword2, keyword3">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Your Page Title Here">
+    <meta property="og:description" content="A brief description of your page for social media.">
+    <meta property="og:image" content="URL to image for social media sharing">
+    <meta property="og:url" content="URL of your page">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/modal.css">
     <style>
