--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Travel Destination</title>
+    <title>Digital Guidebook</title>
+    <meta name="description" content="Homepage of the Digital Guidebook">
+    <meta name="keywords" content="digital guidebook, guidebook, guide, book">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Digital Guidebook">
+    <meta property="og:description" content="Homepage of the Digital Guidebook">
+    <meta property="og:image" content="URL to image for social media sharing">
+    <meta property="og:url" content="URL of your index page">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400&display=swap" rel="stylesheet">
     <style>
         * {
