--- a/guestguide.html
+++ b/guestguide.html
@@ -328,7 +328,7 @@
     <div class="container">
         <!-- Card 1 -->
         <div class="card">
-            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1582610116397-edb318620f90?auto=format&fit=crop&q=80')">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1582610116397-edb318620f90?auto=format&fit=crop&w=800&q=60')">
                 <span class="tag">Namaste</span>
             </div>
             <div class="card-content">
@@ -342,7 +342,7 @@
 
         <!-- Card 2 -->
         <div class="card">
-            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1545324418-cc1a3fa10c00?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80')">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1545324418-cc1a3fa10c00?auto=format&fit=crop&w=800&q=60')">
                 <span class="tag">Prep</span>
             </div>
             <div class="card-content">
@@ -356,7 +356,7 @@
 
         <!-- Card: When You Arrive -->
         <div class="card">
-            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1590381105924-c72589b9ef3f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1471&q=80')">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1590381105924-c72589b9ef3f?auto=format&fit=crop&w=800&q=60')">
                 <span class="tag">Arrival</span>
             </div>
             <div class="card-content">
@@ -369,8 +369,8 @@
         </div>
 
         <!-- Card: If you have kids -->
-        <div class="card">
-            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1472162072942-cd5147eb3902')">
+        <div class="card" onclick="window.location.href='kids-guide.html'">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1472162072942-cd5147eb3902?auto=format&fit=crop&w=800&q=60')">
                 <span class="tag">Kids</span>
             </div>
             <div class="card-content">
@@ -383,8 +383,8 @@
         </div>
 
         <!-- Card: If you love adventures -->
-        <div class="card">
-            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1533692328991-08159ff19fca')">
+        <div class="card" onclick="window.location.href='adventures-guide.html'">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1533692328991-08159ff19fca?auto=format&fit=crop&w=800&q=60')">
                 <span class="tag">Adventure</span>
             </div>
             <div class="card-content">
@@ -398,7 +398,7 @@
 
         <!-- Card: Necessities and convenience -->
         <div class="card">
-            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1445991842772-097fea258e7b')">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1445991842772-097fea258e7b?auto=format&fit=crop&w=800&q=60')">
                 <span class="tag">Essentials</span>
             </div>
             <div class="card-content">
@@ -411,8 +411,8 @@
         </div>
 
         <!-- Card: Shopping nearby -->
-        <div class="card">
-            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1555921015-5532091f6026')">
+        <div class="card" onclick="window.location.href='shopping-guide.html'">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1555921015-5532091f6026?auto=format&fit=crop&w=800&q=60')">
                 <span class="tag">Shopping</span>
             </div>
             <div class="card-content">
@@ -424,9 +424,9 @@
             </div>
         </div>
 
-        <!-- Card 4 -->
+        <!-- Card: Wi-Fi & More -->
         <div class="card">
-            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1483478550801-ceba5fe50e8e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80')">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1483478550801-ceba5fe50e8e?auto=format&fit=crop&w=800&q=60')">
                 <span class="tag">Connect</span>
             </div>
             <div class="card-content">
@@ -438,9 +438,9 @@
             </div>
         </div>
 
-        <!-- Card 5 -->
+        <!-- Card: Amenities -->
         <div class="card">
-            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1571896349842-33c89424de2d')">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1571896349842-33c89424de2d?auto=format&fit=crop&w=800&q=60')">
                 <span class="tag">AMENITIES</span>
             </div>
             <div class="card-content">
@@ -452,9 +452,9 @@
             </div>
         </div>
 
-        <!-- Card 6 -->
+        <!-- Card: Nearby Attractions -->
         <div class="card">
-            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1544644181-1484b3fdfc62')">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1544644181-1484b3fdfc62?auto=format&fit=crop&w=800&q=60')">
                 <span class="tag">Explore</span>
             </div>
             <div class="card-content">
@@ -475,9 +475,9 @@
             </div>
         </div>
 
-        <!-- Card 7 -->
+        <!-- Card: Safety -->
         <div class="card">
-            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1584433144859-1fc3ab64a957?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80')">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1584433144859-1fc3ab64a957?auto=format&fit=crop&w=800&q=60')">
                 <span class="tag">Safety</span>
             </div>
             <div class="card-content">
@@ -489,9 +489,9 @@
             </div>
         </div>
 
-        <!-- Card 8 -->
-        <div class="card">
-            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1576078044571-8ea98b0b0963')">
+        <!-- Card: Review -->
+        <div class="card" onclick="window.location.href='share-story.html'">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1576078044571-8ea98b0b0963?auto=format&fit=crop&w=800&q=60')">
                 <span class="tag">Review</span>
             </div>
             <div class="card-content">
@@ -503,9 +503,23 @@
             </div>
         </div>
 
-        <!-- Card 9 -->
-        <div class="card">
-            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1596394516093-501ba68a0ba6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80')">
+        <!-- Card: Services -->
+        <div class="card" onclick="window.location.href='services.html'">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1445019980597-93fa8acb246c?auto=format&fit=crop&w=800&q=60')">
+                <span class="tag">Services</span>
+            </div>
+            <div class="card-content">
+                <div>
+                    <h2 class="card-title">Extend Stays and Add-on Services</h2>
+                    <div class="card-info">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Card: Until Next Time -->
+        <div class="card" onclick="window.location.href='farewell.html'">
+            <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1596394516093-501ba68a0ba6?auto=format&fit=crop&w=800&q=60')">
                 <span class="tag">Farewell</span>
             </div>
             <div class="card-content">
