--- a/template-for-all-pages.html
+++ b/template-for-all-pages.html
@@ -64,5 +64,12 @@
             observer.observe(section);
         });
     </script>
+
+    <!-- Add this before the back button in each page -->
+    <a href="https://g.page/review" class="review-button" id="reviewButton">
+        Review Us, or We'll Tell Future Guests You Snored.
+    </a>
+
+    <a href="guestguide.html" class="back-button">Back to Guide</a>
 </body>
 </html> 
