--- a/guestguide.html
+++ b/guestguide.html
@@ -459,16 +459,7 @@
             </div>
             <div class="card-content">
                 <div>
-                    <h2 class="card-title">Nearby Attractions & things to do<html lang="en">
-                    <head>
-                        <meta charset="UTF-8">
-                        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                        <title>Document</title>
-                    </head>
-                    <body>
-                        
-                    </body>
-                    </html></h2>
+                    <h2 class="card-title">Nearby Attractions & things to do</h2>
                     <div class="card-info">
                     </div>
                 </div>
@@ -543,8 +534,29 @@
     </div>
 
     <a href="index.html" class="back-button">Back to Home</a>
-    <a href="https://www.google.com/maps/place/Your+Business+Name/reviews" class="review-button" target="_blank">Feeling inspired? Leave a quick review and make our day!</a>
+    <!-- Updated Review Button -->
+    <a href="https://g.page/review" class="review-button" id="reviewButton">
+        Review Us, or We'll Tell Future Guests You Snored.
+    </a>
 
-    <script src="js/modal.js"></script>
+    <script>
+        const reviewMessages = [
+            "Review Us, or We'll Tell Future Guests You Snored.",
+            "Write a Review—We Promise Not to Judge Your Netflix Choices.",
+            "Leave a Review, or We'll Assume You Stole the Towels.",
+            "Your Review Could End World Hunger (Just Kidding, But It Helps Us).",
+            "Help Us Out—We Need the Stars More Than NASA.",
+            "Leave a Review—It's the Least You Can Do After the Free Soap.",
+            "Write a Review, or We'll Tell the Chef You Didn't Like Breakfast.",
+            "Review Us, or We'll Assume You Took the Mini Shampoo Too.",
+            "Your Review Could Save Puppies. Okay, Not Really, but It'll Save Our SEO."
+        ];
+
+        window.onload = function() {
+            const reviewButton = document.getElementById('reviewButton');
+            const randomMessage = reviewMessages[Math.floor(Math.random() * reviewMessages.length)];
+            reviewButton.textContent = randomMessage;
+        }
+    </script>
 </body>
 </html> 
