--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:image" content="URL to image for social media sharing">
     <meta property="og:url" content="URL of your index page">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/favicon.png" type="image/png">
     <style>
         * {
             margin: 0;
