--- a/amenities.html
+++ b/amenities.html
@@ -70,7 +70,7 @@
                 <li>Sunset viewing deck</li>
             </ul>
         </section>
-        <a href="https://g.page/review" class="review-button" id="reviewButton">
+        <a href="reviewprompts.html" class="review-button" id="reviewButton">
             Review Us, or We'll Tell Future Guests You Snored.
         </a>
 
