--- a/guestguide.html
+++ b/guestguide.html
@@ -490,7 +490,7 @@
         </div>
 
         <!-- Card: Review -->
-        <div class="card" onclick="window.location.href='share-story.html'">
+        <div class="card" onclick="window.location.href='reviewprompts.html'">
             <div class="card-image" style="background-image: url('https://images.unsplash.com/photo-1576078044571-8ea98b0b0963?auto=format&fit=crop&w=800&q=60')">
                 <span class="tag">Review</span>
             </div>
@@ -543,7 +543,7 @@
     </div>
 
     <a href="index.html" class="back-button">Back to Home</a>
-    <a href="https://www.google.com/maps/place/Your+Business+Name/reviews" class="review-button" target="_blank">Feeling inspired? Leave a quick review and make our day!</a>
+    <a href="reviewprompts.html" class="review-button" target="_blank">Feeling inspired? Leave a quick review and make our day!</a>
 
     <script src="js/modal.js"></script>
 </body>
