--- a/necessities-guide.html
+++ b/necessities-guide.html
@@ -63,7 +63,7 @@
             Review Us, or We'll Tell Future Guests You Snored.
         </a>
 
-        <a href="guestguide.html" class="back-button">Back to Guide</a>
+        <a href="reviewprompts.html" class="back-button">Back to Guide</a>
     </div>
 
     <script>
