--- a/property-map.html
+++ b/property-map.html
@@ -165,7 +165,7 @@
         </div>
 
         <!-- Review Button -->
-        <a href="YOUR_GOOGLE_REVIEW_LINK" class="review-button" target="_blank">Feeling inspired? Leave a quick review and make our day!</a>
+        <a href="reviewprompts.html" class="review-button" target="_blank">Feeling inspired? Leave a quick review and make our day!</a>
     </div>
 </body>
 </html> 
