--- a/services.html
+++ b/services.html
@@ -263,7 +263,7 @@
             </div>
         </div>
 
-        <a href="https://g.page/review" class="review-button" id="reviewButton">
+        <a href="reviewprompts.html" class="review-button" id="reviewButton">
         </a>
 
         <a href="guestguide.html" class="back-button">Back to Guide</a>
