--- a/template-for-all-pages.html
+++ b/template-for-all-pages.html
@@ -66,7 +66,7 @@
     </script>
 
     <!-- Add this before the back button in each page -->
-    <a href="https://g.page/review" class="review-button" id="reviewButton">
+    <a href="reviewprompts.html" class="review-button" id="reviewButton">
         Review Us, or We'll Tell Future Guests You Snored.
     </a>
 
