--- a/farewell.html
+++ b/farewell.html
@@ -61,7 +61,7 @@
             </div>
         </section>
 
-        <a href="https://g.page/review" class="review-button" id="reviewButton">
+        <a href="reviewprompts.html" class="review-button" id="reviewButton">
             Review Us, or We'll Tell Future Guests You Snored.
         </a>
 
