--- a/pre-arrival.html
+++ b/pre-arrival.html
@@ -71,7 +71,7 @@
             </ul>
         </section>
 
-        <a href="https://g.page/review" class="review-button" id="reviewButton">
+        <a href="reviewprompts.html" class="review-button" id="reviewButton">
             Review Us, or We'll Tell Future Guests You Snored.
         </a>
 
