--- a/safety.html
+++ b/safety.html
@@ -69,7 +69,7 @@
             </ul>
         </section>
 
-        <a href="https://g.page/review" class="review-button" id="reviewButton">
+        <a href="reviewprompts.html" class="review-button" id="reviewButton">
             Review Us, or We'll Tell Future Guests You Snored.
         </a>
 
